--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="section-header-btn text-lg-right mb-20 wow fadeInRight delay-0-2s">
-                            <a href="#" class="theme-btn">Explora más fotos <i class="far fa-long-arrow-right"></i></a>
+                            <a href="https://www.instagram.com/barber_gallego/" class="theme-btn">Explora más fotos <i class="far fa-long-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -310,7 +310,7 @@
                         <div class="gallery-item wow fadeInUp delay-0-8s">
                             <img src="assets/images/gellary/gallery4.jpg" alt="Gallery">
                             <div class="gallery-content">
-                                <h3>Free Style</h3>
+                                <h3>Limpieza Facial</h3>
                                 <p></p>
                                
                             </div>
