--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                            <div class="top-right text-center text-sm-right">
                                 <div class="social-style-one">
                                     <a href="https://www.facebook.com/marcos.gallegovargas" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="https://www.instagram.com/barber_gallego/" target="_blank"><i class="fab fa-instagram"></i></a>
                                   <!--   <a href="#"><i class="fab fa-twitter"></i></a>
                                     <a href="#"><i class="fab fa-youtube"></i></a>
                                     <a href="#"><i class="fab fa-rocketchat"></i></a> -->
@@ -141,11 +142,11 @@
         <section class="what-we-do-area pb-130 rpb-100" id="servicioshome">
             <div class="container">
                 <div class="what-we-do-inner">
-                    <div class="row">
-                        <div class="col-xl-4">
+                    
+                        <!-- <div class="col-xl-4">
                             <div class="feature-image wow fadeInLeft delay-0-2s" style="background-image: url(assets/images/about/what-we-do.jpg);"></div>
-                        </div>
-                        <div class="col-xl-8 align-self-center">
+                        </div> -->
+                        <div class="col-xl-12 align-self-center">
                             <div class="what-we-do-content wow fadeInRight delay-0-2s">
                                 <div class="row">
                                     <div class="col-lg-8">
@@ -202,7 +203,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    
                 </div>
             </div>
         </section>
