--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         </div>
                         <!-- Menu Button -->
                         <div class="menu-button d-none d-lg-block">
-                           <a href="https:/wa.me/+573226822551" class="theme-btn" target="_blank">Agenda una cita <i class="far fa-long-arrow-right"></i></a>
+                           <a href="https://api.whatsapp.com/send/?phone=%2B573226822551&text&type=phone_number&app_absent=0" class="theme-btn" target="_blank">Agenda una cita <i class="far fa-long-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
